SERVER-58148 Consider failed reads as resolved