src/mongo/db/mirror_maestro.cpp
@@ -396,6 +396,12 @@ void MirrorMaestroImpl::_mirror(const std::vector<HostAndPort>& hosts,
                 return;
             }
 
+            // Count both failed and successful reads as resolved
+            gMirroredReadsSection.resolved.fetchAndAdd(1);
+            gMirroredReadsSection.resolvedBreakdown.onResponseReceived(host);
+            LOGV2_DEBUG(
+                31457, 4, "Response received", "host"_attr = host, "response"_attr = args.response);
+
             if (ErrorCodes::isRetriableError(args.response.status)) {
                 LOGV2_WARNING(5089200,
                               "Received mirroring response with a retriable failure",
@@ -406,11 +412,6 @@ void MirrorMaestroImpl::_mirror(const std::vector<HostAndPort>& hosts,
                             "Received mirroring response with a non-okay status",
                             "error"_attr = args.response);
             }
-
-            gMirroredReadsSection.resolved.fetchAndAdd(1);
-            gMirroredReadsSection.resolvedBreakdown.onResponseReceived(host);
-            LOGV2_DEBUG(
-                31457, 4, "Response received", "host"_attr = host, "response"_attr = args.response);
         };
 
         auto newRequest = executor::RemoteCommandRequest(
